src/test/ui/feature-gates/feature-gate-type_alias_enum_variants.stderr
error: enum variants on type aliases are experimental
  --> $DIR/feature-gate-type_alias_enum_variants.rs:9:13
   |
LL |     let t = Alias::Bar(0);
   |             ^^^^^^^^^^
   |
   = help: add `#![feature(type_alias_enum_variants)]` to the crate attributes to enable

error: enum variants on type aliases are experimental
  --> $DIR/feature-gate-type_alias_enum_variants.rs:11:13
   |
LL |     let t = Alias::Baz { i: 0 };
   |             ^^^^^^^^^^
   |
   = help: add `#![feature(type_alias_enum_variants)]` to the crate attributes to enable

error: enum variants on type aliases are experimental
  --> $DIR/feature-gate-type_alias_enum_variants.rs:14:9
   |
LL |         Alias::Bar(_i) => {}
   |         ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(type_alias_enum_variants)]` to the crate attributes to enable

error: enum variants on type aliases are experimental
  --> $DIR/feature-gate-type_alias_enum_variants.rs:16:9
   |
LL |         Alias::Baz { i: _i } => {}
   |         ^^^^^^^^^^
   |
   = help: add `#![feature(type_alias_enum_variants)]` to the crate attributes to enable

error: aborting due to 4 previous errors

